<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trucha</string>
    <string name="title_activity_main">Inicio</string>
    <string name="action_settings">Settings</string>
	<string name="logo_description">Logo restaurante</string>
	<string name="menu_button">Menu</string>
	<string name="edt_txt_host_hint">xxx.xxx.xxx.xxx</string>
	<string name="txt_view_host">Dirección del servidor</string>
	<string name="btn_save_host">Guardar</string>
	
</resources>
